--- a/Portfolio/src/app/experience/experience.component.html
+++ b/Portfolio/src/app/experience/experience.component.html
@@ -1,19 +1,31 @@
-<div>
-  <div class="title">FlickZee</div>
-  <div class="position">Software Engineer Intern</div>
-  <div class="location">
-      <div class="area"></div>
-      <div class="timeline"></div>
-  </div>
-  <div class="description"></div>
-</div>
+<div style="display: flex;">
+  <div style="margin: auto auto;">
+    <div class="exp-box">
+      <div class="title"><a href="https://www.flickzee.com/">FlickZee</a></div>
+      <div class="position">Software Engineer Intern</div>
+      <div class="location">
+        <div class="area">Jaipur,Rajasthan</div>
+        <div class="timeline">June 2019 - August 2019</div>
+      </div>
+      <div class="description">
+        Developing Frontend With Angular.
+        Server Side Rendering using Puppeteer & SEO
+        Developing APIs With NodeJS & Express.
+        Maintaining & Processing Data With Python.
+        Building Crawlers to Get Data from different Website or API using Python & NodeJS.
+      </div>
+    </div>
 
-<div>
-  <div class="title">FOSSEE </div>
-  <div class="position">Member</div>
-  <div class="location">
-      <div class="area">IIT Bombay</div>
-      <div class="timeline"></div>
+    <div class="exp-box">
+      <div class="title"><a
+          href="https://static.fossee.in/fossee/fellowship-report/FOSSEE-web-development-college-profiles.pdf">FOSSEE</a>
+      </div>
+      <div class="position">Web Developer</div>
+      <div class="location">
+        <div class="area">IIT Bombay</div>
+        <div class="timeline">June 2018 - July 2018</div>
+      </div>
+      <div class="description">Developing Drupal Module & Theme in Drupal 7 & 8</div>
+    </div>
   </div>
-  <div class="description"></div>
 </div>
