--- a/Portfolio/src/styles.css
+++ b/Portfolio/src/styles.css
@@ -1,4 +1,8 @@
 body{
     background: #131313;
     color: #fff;
+    font-family: 'Roboto', sans-serif;
+    user-select: none;
+    margin: 0;
+    padding: 0;
 }
