--- a/Portfolio/src/app/profiles/profiles.component.html
+++ b/Portfolio/src/app/profiles/profiles.component.html
@@ -1,17 +1,27 @@
 <!-- <a href="">YOUTUBE</a> -->
 <div>
-  <div class="row" (click)="link('https://www.hackerrank.com/NavonilDas')">
+  <div class="row" (click)="link('mailto:navneeladas@gmail.com')">
     <div class="no">1</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/hackerrank.png'" [defaultImage]="''">
     </div>
     <div class="title">
-      <a href="https://www.hackerrank.com/NavonilDas">HACKERRANK</a>
-
+      <a href="mailto:navneeladas@gmail.com">Email</a>
     </div>
   </div>
-  <div class="row" (click)="link('https://www.interviewbit.com/profile/navonil-das')">
+  
+  <div class="row" (click)="link('https://www.hackerrank.com/NavonilDas')">
     <div class="no">2</div>
+    <div class="icon">
+      <img [lazyLoad]="'../assets/hackerrank.png'" [defaultImage]="''">
+    </div>
+    <div class="title">
+      <a href="https://www.hackerrank.com/NavonilDas">HACKERRANK</a>
+    </div>
+  </div>
+
+  <div class="row" (click)="link('https://www.interviewbit.com/profile/navonil-das')">
+    <div class="no">3</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/ib.png'" [defaultImage]="''">
     </div>
@@ -21,7 +31,7 @@
     </div>
   </div>
   <div class="row" (click)="link('https://www.hackerearth.com/@navneeladas')">
-    <div class="no">3</div>
+    <div class="no">4</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/he.png'" [defaultImage]="''">
     </div>
@@ -31,7 +41,7 @@
     </div>
   </div>
   <div class="row" (click)="link('https://github.com/NavonilDas/')">
-    <div class="no">4</div>
+    <div class="no">5</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/github.png'" style="background: #fff;" [defaultImage]="''">
     </div>
@@ -41,7 +51,7 @@
     </div>
   </div>
   <div class="row" (click)="link('https://www.linkedin.com/in/navonil-das-161838150/')">
-    <div class="no">5</div>
+    <div class="no">6</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/lin.png'" [defaultImage]="''">
     </div>
@@ -51,7 +61,7 @@
     </div>
   </div>
   <div class="row" (click)="link('https://www.instagram.com/krackthecode/')">
-    <div class="no">6</div>
+    <div class="no">7</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/insta.png'" [defaultImage]="''">
     </div>
@@ -61,7 +71,7 @@
     </div>
   </div>
   <div class="row" (click)="link('https://leetcode.com/navonil/')">
-    <div class="no">7</div>
+    <div class="no">8</div>
     <div class="icon">
       <img [lazyLoad]="'../assets/lc.png'" [defaultImage]="''">
     </div>
