--- a/Portfolio/src/app/experience/experience.component.html
+++ b/Portfolio/src/app/experience/experience.component.html
@@ -1,5 +1,6 @@
-<div style="display: flex;">
-  <div style="margin: auto auto;">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
     <div class="exp-box">
       <div class="title"><a href="https://www.flickzee.com/">FlickZee</a></div>
       <div class="position">Software Engineer Intern</div>
@@ -15,7 +16,13 @@
         Building Crawlers to Get Data from different Website or API using Python & NodeJS.
       </div>
     </div>
+  </div>
+  <div class="col-md-3"></div>
+</div>
 
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
     <div class="exp-box">
       <div class="title"><a
           href="https://static.fossee.in/fossee/fellowship-report/FOSSEE-web-development-college-profiles.pdf">FOSSEE</a>
@@ -28,4 +35,5 @@
       <div class="description">Developing Drupal Module & Theme in Drupal 7 & 8</div>
     </div>
   </div>
+  <div class="col-md-3"></div>
 </div>
