--- a/Portfolio/src/app/profiles/profiles.component.html
+++ b/Portfolio/src/app/profiles/profiles.component.html
@@ -3,7 +3,7 @@
   <div class="row" (click)="link('mailto:navneeladas@gmail.com')">
     <div class="no">1</div>
     <div class="icon">
-      <img [lazyLoad]="'../assets/hackerrank.png'" [defaultImage]="''">
+      <img [lazyLoad]="'../assets/gmail.png'" [defaultImage]="''">
     </div>
     <div class="title">
       <a href="mailto:navneeladas@gmail.com">Email</a>
@@ -43,7 +43,7 @@
   <div class="row" (click)="link('https://github.com/NavonilDas/')">
     <div class="no">5</div>
     <div class="icon">
-      <img [lazyLoad]="'../assets/github.png'" style="background: #fff;" [defaultImage]="''">
+      <img [lazyLoad]="'../assets/github.png'" [defaultImage]="''">
     </div>
     <div class="title">
       <a href="https://github.com/NavonilDas/">GITHUB</a>
