--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="title">NAVONIL DAS</div>
-  <div>
+  <div class="d-none d-md-block">
     <ul>
       <li [className]="active == 0?'active':''"><a routerLink="/">EXPERIENCE</a></li>
       <li [className]="active == 1?'active':''"><a routerLink="/projects">PROJECTS</a></li>
@@ -11,8 +11,13 @@
       <li><a href="">RESUME</a></li>
     </ul>
   </div>
+  <div #ham class="d-md-none d-lg-none d-xl-none ham-menu" (click)="openMenu(ham)">
+    <div class="b1"></div>
+    <div class="b2"></div>
+    <div class="b3"></div>
+  </div>
 </header>
 
-<div style="padding: 20px;">
-  <router-outlet></router-outlet>
+<div style="padding: 20px;" [@routerTransition]="prepareRoute(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
 </div>
