--- a/Portfolio/src/app/app.component.css
+++ b/Portfolio/src/app/app.component.css
@@ -9,32 +9,38 @@ header {
 header .title {
     font-size: 2.5em;
     float: right;
+    z-index: 1000;
 }
 
-header ul {
+.slide-menu ul {
     margin: 10px 0 0 0;
     list-style: none;
+    width: auto !important;
 }
 
-header ul li {
+.slide-menu ul li {
     display: inline;
     margin-right: 15px;
 }
 
-header ul li a {
+.slide-menu ul li a {
     text-decoration: none;
     color: #fff;
 }
 
-header ul li.active {
+.slide-menu ul li.active {
     padding-bottom: 10px;
     font-weight: bold;
     border-bottom: 2px solid #949292;
 }
 
-header ul li a:hover {
+.slide-menu ul li a:hover {
     font-weight: bolder;
-    /* font-size: 1.12em; */
+}
+
+.ham-menu {
+    padding-top: 10px;
+    z-index: 1000;
 }
 
 .ham-menu > div {
@@ -44,6 +50,7 @@ header ul li a:hover {
     margin: 6px 0;
     transition: 0.5s;
 }
+
 .ham-chng .b1 {
     -webkit-transform: rotate(-45deg) translate(-6px, 4px);
     transform: rotate(-45deg) translate(-6px, 4px);
@@ -56,4 +63,37 @@ header ul li a:hover {
 .ham-chng .b3 {
     -webkit-transform: rotate(45deg) translate(-6px, -6px);
     transform: rotate(45deg) translate(-6px, -6px);
+}
+
+@media only screen and (max-width: 768px) {
+    .slide-menu {
+        display: flex;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        z-index: 100;
+        background: #202020;
+        width: 0;
+        transition: 0.5s;
+    }
+
+    .slide-menu ul {
+        padding: 0;
+        margin-top: 170px;
+    }
+
+    .slide-menu ul li {
+        padding: 20px;
+        display: block;
+        margin-right: 0;
+    }
+
+    .slide-menu ul li.active {
+        background: #4d4d4d;
+        border: none;
+    }
+    .slide-menu ul li:hover {
+        background: #4d4d4d;
+    }
 }
